--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==5.0.2
 django-allauth==0.50.0
 django-cors-headers==4.3.1
 django-environ==0.11.2
+django-location-field==2.7.3
 django-rest-auth==0.9.5
 django-rest-durin==1.1.0
 django-rest-knox==4.2.0
